# AP-Bots

./: .gitignore  README.md  bfi_analysis.py  eval.py  exp_datasets.py  feature_processor.py  model_config.cfg  models.py  packages.txt  prep_lamp_res.py  prompts.py  pyproject.toml  requirements.txt  retriever.py  run_exp.py  samples.py  setup.py  streamlit_demo.py  utils.py
.devcontainer/: devcontainer.json
AP_Bots/: .gitignore  exp_datasets.py  feature_processor.py  model_config.cfg  models.py  prompts.py  requirements.txt  run_exp.py  samples.py
bfi/: analyze_llm_distance.py  bfi_analysis.py  error_analysis.py  k_comparison_analysis.py  k_sensitivity_analysis.py  score_analysis.py
evals/: eval_lamp_4_dev_user.csv  eval_lamp_5_dev_time.csv  eval_lamp_5_dev_user.csv  eval_lamp_7_dev_user.csv
evaluation/: eval.py  eval_amazon_Grocery_and_Gourmet_Food_2018.csv  eval_lamp_4_dev_user.csv  eval_lamp_5_dev_user.csv  indv_eval.py  total_eval.py
personality_analysis/: analysis_utils.py  bfi_analysis.py  bfi_infer.py  get_bfi_results.py  k_comparison_analysis.py  lexicon_analysis.py  llm_distance_analysis.py
preds/: amazon_Grocery_and_Gourmet_Food_2018_GEMMA-2-27B_[]_contriever_RS(1)_K(10)).json  amazon_Grocery_and_Gourmet_Food_2018_GEMMA-2-2B_[]_contriever_RS(1)_K(0)).json  amazon_Grocery_and_Gourmet_Food_2018_GEMMA-2-2B_[]_contriever_RS(1)_K(10)).json  amazon_Grocery_and_Gourmet_Food_2018_GPT-4o-mini_[]_contriever_RS(1)_K(0)).jsonl  amazon_Grocery_and_Gourmet_Food_2018_LLAMA-3.2-3B_[]_contriever_RS(1)_K(0)).json  (+6 more)
utils/: argument_parser.py  file_utils.py  misc.py  (+1 more)
(+193 files in other folders)
