[project]
name = "ap-bots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.2.1",
    "anthropic>=0.42.0",
    "bitsandbytes>=0.45.0",
    "evaluate>=0.4.3",
    "google-generativeai>=0.8.3",
    "huggingface-hub>=0.27.1",
    "openai>=1.59.6",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "rouge-score>=0.1.2",
    "sentence-transformers>=3.3.1",
    "spacy>=3.8.3",
    "textblob>=0.18.0.post0",
    "textstat>=0.7.4",
    "tiktoken>=0.8.0",
    "transformers>=4.48.0",
]
